--- a/package.json
+++ b/package.json
@@ -15,12 +15,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.21.0",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.1",
     "idb": "^7.1.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
+    "concurrently": "^5.3.0",
     "nodemon": "^2.0.4"
   }
 }
